source/stylesheets/site.css.scss
@import '../../../../bootstrap/_functions.scss';
@import '../../../../bootstrap/_variables.scss';
@import '../../../../bootstrap/mixins/_breakpoints.scss';

$colors: #00080F	#031829	#062640	#073358	#0D4572	#175689	#1F66A1	#2C7ABB	#398DD2	#4C9BDC	#63A9E3	#81BBEA	#9BC9EF	#B4D8F6	#D5ECFF	#EFF7FF;

$bg_dark: nth($colors, 2); // From darkest to lightest
$bg_light: nth($colors, 4);
$bg_highlight: nth($colors, 6);
$link_base: nth($colors, 15);
$color_base: nth($colors, 13);
$link_highlight: nth($colors, 16);


body {
  font-size: 1.2rem;
}

body {
    background: $bg_dark;
    color: $color_base;
    font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
    text-align: left;
    letter-spacing: 0;
    font-weight: 400;
    line-height: 1.8;
}

p {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

a {
   color: $link_base;

   &:focus,
   &:hover {
       color: $link_highlight;
   }
}

a:focus, a:hover, a:visited, a:link, a:active
{
    text-decoration: none;
}

.navbar {
    background: $bg_light;
    margin-bottom: 1em;
}

.blockquote {
    background: $bg_light;
}

.jumbotron {
    background: $bg_light;
}

.table th {
   color: $color_base;
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 768px) 
{ 
    .table {
       white-space: nowrap;
       width: 1%;
    }
}

td a div {
    width: 100%;
    height: 100%;
}

td a div:focus,
td a div:hover {
    background: $bg_light;
}

.album {
}

.card {
  float: center;
  margin-bottom: 1rem;
  border: 0;
  text-align: center;
  background: $bg_dark;
  width: 22rem;
}

/* override link color to make the text more visible. */
.card-title,
.card-subtitle,
.card-text {
   color: $color_base;

   &:focus,
   &:hover {
       color: $color_base;
   }
}

.card-body {
  background: $bg_light;
}

/* highlight the card-body when any part of the card is highlighted. */
.card:focus > .card-body,
.card:hover > .card-body,
{
  background: $bg_highlight;
}

/* override the focus/hover attributes for links from site.css stop the text from changing color. */
.card-body a {
    &:focus,
    &:hover {
       color: $link_base;
    }
}

.card-text {
    font-size: 75%;
}

